exports[`Cache .get() should check for the value in every store 1`] = `
Cache {
  "stores": Array [
    MemoryStore {
      "stats": Object {
        "getCount": 0,
        "hitCount": 0,
      },
      "store": Array [],
    },
    MemoryStore {
      "stats": Object {
        "getCount": 0,
        "hitCount": 0,
      },
      "store": Array [],
    },
  ],
}
`;

exports[`Cache .get() should check for the value in every store 2`] = `
Cache {
  "stores": Array [
    MemoryStore {
      "stats": Object {
        "getCount": 1,
        "hitCount": 0,
      },
      "store": Array [],
    },
    MemoryStore {
      "stats": Object {
        "getCount": 1,
        "hitCount": 0,
      },
      "store": Array [],
    },
  ],
}
`;

exports[`Cache .get() should check for the value in every store 3`] = `
Cache {
  "stores": Array [
    MemoryStore {
      "stats": Object {
        "getCount": 2,
        "hitCount": 0,
      },
      "store": Array [],
    },
    MemoryStore {
      "stats": Object {
        "getCount": 2,
        "hitCount": 1,
      },
      "store": Array [
        Array [
          "key",
          "{\"value\":{\"val\":1},\"options\":{}}",
        ],
      ],
    },
  ],
}
`;

exports[`Cache .get() should return a Promise<Value> 1`] = `
Cache {
  "stores": Array [
    MemoryStore {
      "stats": Object {
        "getCount": 2,
        "hitCount": 1,
      },
      "store": Array [
        Array [
          "key",
          "{\"value\":{\"val\":1},\"options\":{}}",
        ],
      ],
    },
    MemoryStore {
      "stats": Object {
        "getCount": 1,
        "hitCount": 0,
      },
      "store": Array [
        Array [
          "key",
          "{\"value\":{\"val\":1},\"options\":{}}",
        ],
      ],
    },
  ],
}
`;

exports[`Cache .refresh() should refresh the cache with the returned value 1`] = `
Cache {
  "stores": Array [
    MemoryStore {
      "stats": Object {
        "getCount": 1,
        "hitCount": 1,
      },
      "store": Array [
        Array [
          "key",
          "{\"value\":{\"val\":1},\"options\":{\"expire\":10,\"stale\":5}}",
        ],
      ],
    },
    MemoryStore {
      "stats": Object {
        "getCount": 1,
        "hitCount": 1,
      },
      "store": Array [
        Array [
          "key",
          "{\"value\":{\"val\":1},\"options\":{\"expire\":10,\"stale\":5}}",
        ],
      ],
    },
  ],
}
`;

exports[`Cache .wrap should refresh the value if it is expired 1`] = `
Cache {
  "stores": Array [
    MemoryStore {
      "stats": Object {
        "getCount": 1,
        "hitCount": 1,
      },
      "store": Array [
        Array [
          "key",
          "{\"value\":{\"val\":1},\"options\":{}}",
        ],
      ],
    },
    MemoryStore {
      "stats": Object {
        "getCount": 0,
        "hitCount": 0,
      },
      "store": Array [
        Array [
          "key",
          "{\"value\":{\"val\":1},\"options\":{}}",
        ],
      ],
    },
  ],
}
`;

exports[`Cache .wrap should refresh the value if it is expired 2`] = `
Cache {
  "stores": Array [
    MemoryStore {
      "stats": Object {
        "getCount": 2,
        "hitCount": 2,
      },
      "store": Array [
        Array [
          "key",
          "{\"value\":{\"val\":1},\"options\":{}}",
        ],
      ],
    },
    MemoryStore {
      "stats": Object {
        "getCount": 0,
        "hitCount": 0,
      },
      "store": Array [
        Array [
          "key",
          "{\"value\":{\"val\":1},\"options\":{}}",
        ],
      ],
    },
  ],
}
`;

exports[`Cache .wrap should refresh the value if it is not in the cache 1`] = `
Cache {
  "stores": Array [
    MemoryStore {
      "stats": Object {
        "getCount": 0,
        "hitCount": 0,
      },
      "store": Array [],
    },
    MemoryStore {
      "stats": Object {
        "getCount": 0,
        "hitCount": 0,
      },
      "store": Array [],
    },
  ],
}
`;

exports[`Cache .wrap should refresh the value if it is not in the cache 2`] = `
Cache {
  "stores": Array [
    MemoryStore {
      "stats": Object {
        "getCount": 1,
        "hitCount": 0,
      },
      "store": Array [
        Array [
          "key",
          "{\"value\":{\"val\":1},\"options\":{}}",
        ],
      ],
    },
    MemoryStore {
      "stats": Object {
        "getCount": 1,
        "hitCount": 0,
      },
      "store": Array [
        Array [
          "key",
          "{\"value\":{\"val\":1},\"options\":{}}",
        ],
      ],
    },
  ],
}
`;

exports[`Cache .wrap should return the value if it is expired but stale and the wrapped function fails 1`] = `
Cache {
  "stores": Array [
    MemoryStore {
      "stats": Object {
        "getCount": 1,
        "hitCount": 1,
      },
      "store": Array [
        Array [
          "key",
          "{\"value\":{\"val\":1},\"options\":{}}",
        ],
      ],
    },
    MemoryStore {
      "stats": Object {
        "getCount": 0,
        "hitCount": 0,
      },
      "store": Array [
        Array [
          "key",
          "{\"value\":{\"val\":1},\"options\":{}}",
        ],
      ],
    },
  ],
}
`;

exports[`Cache .wrap should return the value if it is expired but stale and the wrapped function fails 2`] = `
Cache {
  "stores": Array [
    MemoryStore {
      "stats": Object {
        "getCount": 2,
        "hitCount": 2,
      },
      "store": Array [
        Array [
          "key",
          "{\"value\":{\"val\":1},\"options\":{}}",
        ],
      ],
    },
    MemoryStore {
      "stats": Object {
        "getCount": 0,
        "hitCount": 0,
      },
      "store": Array [
        Array [
          "key",
          "{\"value\":{\"val\":1},\"options\":{}}",
        ],
      ],
    },
  ],
}
`;

exports[`Cache .wrap should throw an error if the item is not in cache and the wrapped function fails 1`] = `[Error: error]`;

exports[`Cache .wrap should throw an error if the value in cache is expired and stale and the wrapped function fails 1`] = `[Error: error]`;
